tests/fixtures/invalid/set_bitnot.py
# Cannot use bitwise NOT on Set[int]
x: set[int] = {1, 2, 3}
y: int = ~x
